--- a/templates/deluxe/css/webstore.css
+++ b/templates/deluxe/css/webstore.css
@@ -438,6 +438,9 @@ display:block;
 margin:0 auto 3px;
 cursor: hand; cursor: pointer;
 }
+.product_detail_image {
+text-align: center;
+}
 
 .product_cell_price {
 background:url(images/price_bg.png) repeat-x;
