--- a/templates/framework/css/webstore.css
+++ b/templates/framework/css/webstore.css
@@ -392,6 +392,10 @@ margin:0 auto 3px;
 cursor: hand; cursor: pointer;
 }
 
+.product_detail_image {
+text-align: center;
+}
+
 .product_cell_price {
 display:inline;
 font-weight:700;
